# Roofline-extraction-from-orthophotos

./: README.md  class_definition.py  main.py
kinetic_partition/: CMakeLists.txt
kinetic_partition/src/: comp_list.h  comparators.h  defs.h  geometry.cpp  geometry.h  indexed_event.cpp  indexed_event.h  kinetic_model.cpp  kinetic_model.h  kinetic_partition.cpp  line_item.cpp  line_item.h  lsd.cpp  lsd_interface.cpp  lsd_interface.h  lsd_tuned.cpp  lsd_tuned.h  matrix.h  means.cpp  means.h  parameters.cpp  parameters.h  partition.cpp  partition.h  partition_elements.cpp  partition_elements.h  propagation.cpp  propagation.h  quadtree.h  quadtree_point.cpp  quadtree_point.h  r_angle.cpp  r_angle.h  r_ordinate.cpp  r_ordinate.h  refine_partition.cpp  refine_partition.h  regularization_angles.cpp  regularization_angles.h  regularization_angles_ms.cpp  (+11 more)
